# sysml-rs

./: .gitattributes  .gitignore  COVERAGE_STATUS.md  Cargo.toml  DEBUGGING.md  DEPENDENCY.md  HANDOVER.md  README.md  REFERENCES_MIGRATION_PLAN.md  ROADMAP.md  package.json  plan-100-percent-resolution.md
benchmarks/: PERFORMANCE_NOTES.md
benchmarks/baselines/: with_caches.txt
codegen/: Cargo.toml  README.md
codegen/src/: accessor_generator.rs  crossref_generator.rs  crossref_validation.rs  enum_generator.rs  enum_value_generator.rs  grammar_element_validator.rs  hierarchy_generator.rs  inheritance.rs  json_schema_parser.rs  lib.rs  pest_generator.rs  pest_validator.rs  property_validation_validator.rs  relationship_generator.rs  resolution_spec_validator.rs  shapes_parser.rs  spec_validation.rs  ttl_parser.rs  validation_generator.rs  xmi_class_parser.rs  xmi_relationship_parser.rs  xtext_crossref_parser.rs  xtext_parser.rs
codegen/tests/: real_vocab_test.rs
examples/: model_builder.rs  parse_sysml_model.rs  visualization.rs
libraries/: README.md
model/: README.md  syside-diagnosticx.txt  sysml-rs.sysml
references/sysmlv2/: OpenAPI.json  README.md  REFERENCE_MAPPING.md  SysML-shapes.ttl  Systems-Modeling-API.xmi  useful_links.txt
scripts/: bench.sh
sysml-api/: Cargo.toml  README.md
sysml-api/src/: lib.rs
sysml-canon/: Cargo.toml  README.md
sysml-canon/src/: lib.rs
sysml-core/: Cargo.toml  README.md  build.rs
sysml-core/benches/: core_benchmarks.rs  resolution_benchmarks.rs
sysml-core/examples/: basic_ownership.rs  bench_resolution.rs  end_to_end.rs  namespace_resolution.rs  profile_resolution.rs  structural_validation.rs  vehicle_model.rs
sysml-core/src/: factory.rs  lib.rs  membership.rs  namespace.rs  ownership.rs  structural_validation.rs  validation.rs
sysml-core/src/resolution/: mod.rs
sysml-core/src/resolution/scoping/: chaining.rs  global.rs  mod.rs  non_expression.rs  owning.rs  relative.rs  transition.rs
sysml-core/tests/: coverage_tests.rs
sysml-id/: Cargo.toml  README.md
sysml-id/benches/: id_benchmarks.rs
sysml-id/src/: lib.rs
sysml-lsp/: Cargo.toml  INTEGRATION.md  README.md
sysml-lsp-server/: Cargo.toml  README.md
sysml-lsp-server/src/: lib.rs  main.rs
sysml-lsp-zed-extension/: .gitignore  Cargo.toml  README.md  extension.toml
sysml-lsp-zed-extension/src/: lib.rs
sysml-lsp/src/: lib.rs
sysml-meta/: Cargo.toml  README.md
sysml-meta/src/: lib.rs
sysml-query/: Cargo.toml  README.md
sysml-query/src/: lib.rs
sysml-run/: Cargo.toml  README.md
sysml-run-constraints/: Cargo.toml  README.md
sysml-run-constraints/src/: lib.rs
sysml-run-statemachine/: Cargo.toml  README.md
sysml-run-statemachine/examples/: au_hybrid_sim.rs
sysml-run-statemachine/src/: action_parser.rs  lib.rs  parallel.rs
sysml-run/src/: lib.rs
sysml-span/: ANNOTATE_SNIPPETS_PLAN.md  Cargo.toml  README.md
sysml-span/benches/: span_benchmarks.rs
sysml-span/examples/: render_diagnostics.rs
sysml-span/src/: lib.rs  pretty.rs
sysml-spec-tests/: Cargo.toml  README.md
sysml-spec-tests/data/: constructible_kinds.txt  expected_failures.txt
sysml-spec-tests/examples/: categorize_failures.rs  resolution_debug.rs
sysml-spec-tests/src/: corpus.rs  element_coverage.rs  grammar_rules.rs  lib.rs  operators.rs  report.rs  rule_coverage.rs
sysml-spec-tests/tests/: corpus_tests.rs  scoping_tests.rs  test_family.rs  test_family_debug.rs
sysml-store/: Cargo.toml  README.md
sysml-store-postgres/: Cargo.toml  README.md
sysml-store-postgres/src/: lib.rs
sysml-store/src/: lib.rs
sysml-text/: Cargo.toml  README.md
sysml-text-monticore-sidecar/: Cargo.toml  README.md
sysml-text-monticore-sidecar/src/: lib.rs
sysml-text-pest/: Cargo.toml  README.md  build.rs  pest-review.md
sysml-text-pest/benches/: parser_benchmarks.rs
sysml-text-pest/examples/: parse_pipeline_render.rs  quick_bench.rs
sysml-text-pest/src/: lib.rs
sysml-text-pest/src/ast/: extraction.rs  mod.rs
sysml-text-pest/src/grammar/: sysml.pest
sysml-text-pest/src/grammar/fragments/: actions.pest  annotations.pest  definitions.pest  expressions.pest  features.pest  header.pest  names.pest  relationships.pest  structure.pest  terminals.pest  tokens.pest  usages.pest
sysml-text-pest/tests/: debug_interface.rs  integration_tests.rs  interface_simple_test.rs  ownership_tests.rs  property_tests.rs  relationship_tests.rs  test_drone_temp.rs
sysml-text-pilot-sidecar/: Cargo.toml  README.md
sysml-text-pilot-sidecar/src/: lib.rs
sysml-text-syside-sidecar/: Cargo.toml  README.md
sysml-text-syside-sidecar/src/: lib.rs
sysml-text/src/: lib.rs  library.rs
sysml-ts/: Cargo.toml  IDE_TODO.md  README.md  TREE_SITTER_PLAN.md
sysml-ts/src/: lib.rs
sysml-ts/tree-sitter/: Cargo.toml  Package.swift  grammar.js  package.json
sysml-ts/tree-sitter/bindings/c/: tree-sitter-sysml.pc.in
sysml-ts/tree-sitter/bindings/go/: go.mod
sysml-ts/tree-sitter/bindings/python/tree_sitter_sysml/: __init__.py  binding.c
sysml-ts/tree-sitter/bindings/rust/: build.rs  lib.rs
sysml-ts/tree-sitter/queries/: brackets.scm  highlights.scm  indents.scm  locals.scm
sysml-ts/tree-sitter/src/: grammar.json  node-types.json  parser.c
sysml-ts/tree-sitter/test/corpus/: basic.txt
sysml-vis/: Cargo.toml  README.md  ROADMAP.md
sysml-vis/examples/: browser_view.rs  general_view.rs  interconnection_view.rs  render_dot_svg.rs  requirements_view.rs  state_view.rs
sysml-vis/src/: classify.rs  cytoscape.rs  dot.rs  graphviz.rs  lib.rs  plantuml.rs
sysml-web-vis/: .agents  JoinJSReference.md  README.md  ROADMAP.md  SysMLv2 Diagram Visualization_ Review and Improvement Plan.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
sysml-web-vis/docs/: interconnection-view.md  verification.md
sysml-web-vis/fixtures/: action-flow.json  browser.json  general-bdd.json  general-package.json  general-requirements.json  general-usecase.json  general.json  geometry.json  grid.json  interconnection-ibd.json  interconnection-parametric.json  interconnection.json  (+2 more)
(+4112 files in other folders)
