[workspace]
resolver = "2"
members = [
    # Build Tools
    "codegen",
    # Foundations
    "sysml-id",
    "sysml-span",
    "sysml-meta",
    # Semantic Core
    "sysml-core",
    "sysml-query",
    "sysml-canon",
    # Text Frontend
    "sysml-text",
    "sysml-text-pilot-sidecar",
    "sysml-text-monticore-sidecar",
    "sysml-text-syside-sidecar",
    "sysml-text-pest",
    # IDE
    "sysml-ts",
    "sysml-lsp",
    "sysml-lsp-server",
    # Visualization
    "sysml-vis",
    # Execution
    "sysml-run",
    "sysml-run-statemachine",
    "sysml-run-constraints",
    # Storage + API
    "sysml-store",
    "sysml-store-postgres",
    "sysml-api",
    # Testing
    "sysml-spec-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/sysml-rs"

[workspace.dependencies]
# Internal crates
sysml-codegen = { path = "codegen" }
sysml-id = { path = "sysml-id" }
sysml-span = { path = "sysml-span" }
sysml-meta = { path = "sysml-meta" }
sysml-core = { path = "sysml-core" }
sysml-query = { path = "sysml-query" }
sysml-canon = { path = "sysml-canon" }
sysml-text = { path = "sysml-text" }
sysml-text-pest = { path = "sysml-text-pest", default-features = false }
sysml-ts = { path = "sysml-ts" }
sysml-lsp = { path = "sysml-lsp" }
sysml-run = { path = "sysml-run" }
sysml-store = { path = "sysml-store" }

# External dependencies
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tower-lsp = "0.20"
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
criterion = { version = "0.5", features = ["html_reports"] }
walkdir = "2.4"
rustc-hash = "2.0"
rayon = "1.10"

# For running examples at the workspace level
[package]
name = "sysml-rs-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sysml-core = { path = "sysml-core" }
sysml-vis = { path = "sysml-vis" }
sysml-query = { path = "sysml-query" }

[profile.release-debug]
inherits = "release"
debug = true

[[example]]
name = "model_builder"
path = "examples/model_builder.rs"

[[example]]
name = "visualization"
path = "examples/visualization.rs"
