[package]
name = "sysml-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code generation utilities for sysml-rs, including TTL vocabulary parsing"

# This is a build-time only crate, not a runtime dependency
[lib]
path = "src/lib.rs"

[dependencies]
# Build-time dependencies for parsing specification files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.37"

[dev-dependencies]
