[package]
name = "sysml-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API server for SysML v2 models"

[dependencies]
sysml-store = { workspace = true }
sysml-query = { workspace = true }
sysml-core = { workspace = true }
sysml-canon = { workspace = true }
sysml-id = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
