[package]
name = "sysml-canon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Canonical JSON serialization for SysML v2 ModelGraph with stable ordering"

[dependencies]
sysml-core = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
