[package]
name = "sysml-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core model types for SysML v2: Element, Relationship, and ModelGraph"

[features]
default = []
serde = ["dep:serde", "sysml-id/serde", "sysml-span/serde", "sysml-meta/serde"]

[dependencies]
sysml-id = { workspace = true }
sysml-span = { workspace = true }
sysml-meta = { workspace = true }
serde = { workspace = true, optional = true }

[build-dependencies]
sysml-codegen = { workspace = true }
