[package]
name = "sysml-lsp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP server implementation for SysML v2"

[dependencies]
sysml-lsp = { workspace = true }
sysml-text = { workspace = true }
sysml-ts = { workspace = true }
sysml-span = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
