[package]
name = "sysml-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metadata types for SysML v2: applicability, clause references, and values"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
sysml-id = { workspace = true }
