[package]
name = "sysml-run-constraints"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Constraint compilation and evaluation for SysML v2"

[dependencies]
sysml-run = { workspace = true }
sysml-core = { workspace = true }
sysml-query = { workspace = true }
sysml-span = { workspace = true }
