[package]
name = "sysml-span"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Source locations, diagnostics, and severity levels for SysML v2"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "span_benchmarks"
harness = false
