[package]
name = "sysml-store-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PostgreSQL storage backend for SysML v2 model snapshots"

[features]
default = []
postgres = ["sqlx", "tokio"]

[dependencies]
sysml-store = { workspace = true }
sysml-core = { workspace = true }
sysml-id = { workspace = true }
sysml-canon = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
