[package]
name = "sysml-text-pilot-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pilot parser adapter for SysML v2 (JVM/HTTP sidecar)"

[dependencies]
sysml-text = { workspace = true }
sysml-core = { workspace = true }
sysml-span = { workspace = true }
